--- a/demo/src/main/webapp/index.html
+++ b/demo/src/main/webapp/index.html
@@ -12,7 +12,7 @@ import ReactDOM from 'react-dom';
 import Button from '@material-ui/core/Button';
 
 function App() {
-  return <Button variant="contained">Hello World~~~</Button>;
+  return <Button variant="contained">Hello World~</Button>;
 }
 
 ReactDOM.render(<App />, document.querySelector('#app'));
